* Gnome and KDE thumbnailers have been removed because they depended on
  the code of the old QWidgets-based GUI.
* New themes optimized for colorblindness.
* New context menu to go to any played move on board or edit its annotation.
* Additional warning dialogs to reduce the likelihood that an autosaved
  game is lost, for example because it was changed by another instance
  of Pentobi.
* The computer level is now set in the computer colors dialog.
* Reintroduced forward10/backward10 toolbuttons on desktop.
* New shortcut keys for moving the selected piece in larger steps
  on the board and for rotating and flipping it.
* New shortcut Shift+F6, which behaves like F6 (Find Move) but iterates
  backwards through the list of legal moves.
* Analysis speed dialog is now also available on Android (only fast and
  normal speed)
* The Android version now shows an error before open/save if permission
  to access storage have not been granted.
* The Android version now pauses running move generations or game analyses
  if the app goes into inactive state (e.g. during incoming calls).
* The translation source strings for menu items and actions no longer use
  an ampersand to mark a mnemonic but a separate translation string for
  the mnemonic. Ampersands caused problems with searches in Weblate
  (https://github.com/WeblateOrg/weblate/issues/1861)

Bug fixes:

* Picking up a piece from board in setup mode sometimes switched piece
  instances in game variants with multiple instances per piece.


Version 15.0.UNKNOWN (v15-fixes)
================================

Desktop version:

* Avoid duplicate menu mnemonics and fixed minor errors in translations.

Android version:

* Program could hang or crash if quit during running game analysis.
* Board was not updated if it became empty after opening a file failed.
* Running computer move was not aborted after opening a file failed.
* Disable menu item Analyze Game if game has no moves.