@@ -163,9 +163,7 @@ screen mode without using the window menu, press the F11 key.</dd>
 <dt>Computer Settings</dt>
 <dd>Select which colors are played by the computer and the playing strength for
 the computer. Higher levels are stronger but can make the computer take a long
-time for playing moves on slow computers. The computer will remember the level
-last used separately for each game variant and restore it when the game variant
-is changed.</dd>
+time for playing moves on slow computers.</dd>
 <dt>Play</dt>
 <dd>Make the computer play a move for the current color. This can be used to
 change the color the computer plays or to resume playing after navigating in
