@@ -182,9 +182,7 @@ verlassen, drücken Sie die F11-Taste.</dd>
 <dt>Computer-Einstellungen</dt>
 <dd>Wählt aus, welche Farben vom Computer gespielt werden und die Spielstärke
 des Computers. Höhere Spielstufen sind stärker, können aber die Bedenkzeiten
-des Computers auf langsamen Computern sehr verlängern. Der Computer merkt sich
-die zuletzt benutzte Spielstufe für jede Spielvariante einzeln und wird sie
-wiederherstellen, wenn die Spielvariante gewechselt wird.</dd>
+des Computers auf langsamen Computern sehr verlängern.</dd>
 <dt>Spielen</dt>
 <dd>Lässt den Computer einen Zug für die gegenwärtige Farbe spielen. Dies kann
 zum Ändern der Computer-Farbe benutzt werden oder um nach dem Navigieren im
